--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -186,7 +186,7 @@
     },
     "benefits": {
       "title": {
-        "title": "Key Benefits",
+        "title": "Key Benefits"
       },
       "items": {
         "operation": {
